# ssc_gesture

./: .gitignore  CMakeLists.txt  README.md  nodelets.xml  package.xml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  ros_entrypoint.sh
config/: params.yaml
gesture_detector/: app.py  requirements.txt
gesture_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gesture_detector/model/: __init__.py
gesture_detector/utils/: __init__.py
include/ssc_joystick/: ssc_gesture_nodelet.hpp  ssc_joystick_nodelet.hpp
launch/: gesture_detection.launch  passenger_dashboard.launch  ssc_gesture.launch  training_wheels_gesture_input.launch
msg/: Gesture.msg
src/: gesture_data_collector.py  gesture_detector_node.py  gesture_detector_node_CLIP.py  gesture_detector_node_DEV.py  gesture_detector_node_DEVEL.py  gesture_detector_node_Test.py  passenger_dashboard.py  ssc_gesture_node.cpp  ssc_gesture_nodelet.cpp  ssc_joystick_nodelet.cpp  training_wheels_gesture_input_node.py
